--- a/templates/index.html
+++ b/templates/index.html
@@ -108,10 +108,10 @@
 					<h1>Locations</h1>
 					<table>
 						<tr>
-							<td class="table_headers">Detail</td>
-							<td class="table_headers">Name</td>
-							<td class="table_headers">Description</td>
-							<td class="table_headers">Servers</td>
+							<td class="table_headers_location">Detail</td>
+							<td class="table_headers_location">Name</td>
+							<td class="table_headers_location">Description</td>
+							<td class="table_headers_location">Servers</td>
 						</tr>
 						{% for location in locations %}
 						<tr>
@@ -140,10 +140,10 @@
 					<h1>Servers</h1>
 					<table>
 						<tr>
-							<td class="table_headers">Detail</td>
-							<td class="table_headers">Name</td>
-							<td class="table_headers">Description</td>
-							<td class="table_headers">Applications</td>
+							<td class="table_headers_Server">Detail</td>
+							<td class="table_headers_Server">Name</td>
+							<td class="table_headers_Server">Description</td>
+							<td class="table_headers_Server">Applications</td>
 						</tr>
 						{% for server in servers %}
 						<tr>
@@ -170,9 +170,9 @@
 					<h1>Applications</h1>
 					<table>
 						<tr>
-							<td class="table_headers">Detail</td>
-							<td class="table_headers">Name</td>
-							<td class="table_headers">Description</td>
+							<td class="table_headers_app">Detail</td>
+							<td class="table_headers_app">Name</td>
+							<td class="table_headers_app">Description</td>
 						</tr>
 						{% for application in applications %}
 						<tr>
