--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,14 @@
  	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 </head>
 <body>
+	<div class="header">
+		<div class="challenge">
+			<a href="/">Challenge</a>
+		</div>
+		<div class="about">
+			<a href="/about">About</a>
+		</div>
+	</div>
 {% block body %}
 {% endblock %}
 </body>
